--- a/home/dot_bashrc.tmpl
+++ b/home/dot_bashrc.tmpl
@@ -7,6 +7,15 @@
 # see /usr/share/doc/bash/examples/startup-files (in the package bash-doc)
 # for examples
 
+# if not coming from .bash_profile and .bash_profile exists
+if [[ -z "${COMING_FROM_BASH_PROFILE}" && -f "${HOME}/.bash_profile" ]]; then
+  export COMING_FROM_BASHRC=true
+  # shellcheck source=./dot_profile.tmpl
+  source "${HOME}/.bash_profile"
+  unset COMING_FROM_BASHRC
+fi
+
+
 # If not running interactively, don't do anything
 case $- in
     *i*) ;;
