--- a/home/dot_bash_aliases.tmpl
+++ b/home/dot_bash_aliases.tmpl
@@ -1,1 +1,42 @@
+# -*-mode:bash-*- vim:ft=bash
+
+# ~/.bash_aliases
+# =============================================================================
+# Shell aliases sourced by `~/.bashrc` and `~/.zshrc`.
+#
+# OSTYPE values used:
+#     - darwin: macOS
+#     - cygwin: Cygwin POSIX-compatible environment for Windows
+#     - mingw: MinGW Minimalist GNU for Windows
+#     - msys: MinGW Lightweight shell and GNU utilities for Windows
+
 # shellcheck shell=bash
+
+# Redefine standard commands to improve their behavior
+# -----------------------------------------------------------------------------
+
+# Colorizes the `grep` output.
+# enable color support of ls and also add handy aliases
+if [ -x /usr/bin/dircolors ]; then
+    test -r ~/.dircolors && eval "$(dircolors -b ~/.dircolors)" || eval "$(dircolors -b)"
+    alias ls='ls --color=auto'
+    #alias dir='dir --color=auto'
+    #alias vdir='vdir --color=auto'
+
+    alias grep='grep --color=auto'
+    alias fgrep='fgrep --color=auto'
+    alias egrep='egrep --color=auto'
+fi
+
+
+# some more ls aliases
+alias ll='ls -alF'
+alias la='ls -A'
+alias l='ls -CF'
+
+# Add an "alert" alias for long running commands.  Use like so:
+#   sleep 10; alert
+alias alert='notify-send --urgency=low -i "$([ $? = 0 ] && echo terminal || echo error)" "$(history|tail -n1|sed -e '\''s/^\s*[0-9]\+\s*//;s/[;&|]\s*alert$//'\'')"'
+
+# some aliases for chezmoi
+alias cm='chezmoi'
