--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -11,6 +11,10 @@ main = "{{ $main }}"
 # encry use gpg
 encryption = "gpg"
 
+# bitwarden
+[data.bitwarden]
+gpg_secret_sub = "2cea3e57-032a-4c5f-b2e3-f5656c9af06c"
+
 # configure recipient for gpg
 [gpg]
 recipient = "70C23CEACC3E45025C7BCDD7611ECD7DA2214A89"
