README.md modified with gpg trust

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -14,7 +14,8 @@
 {{ $classicSnaps := list -}}
 
 {{ if not .headless -}}
-{{   $packages = mustAppend $packages "vim-gtk" "meld" -}}
+{{   $packages = mustAppend $packages "vim-gtk" -}}
+{{   $packages = mustAppend $packages "meld" -}}
 {{   $classicSnaps = mustAppend $classicSnaps "code" -}}
 {{ end -}}
 
