modified bash_profile install-packages.sh with configure fcitx5

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -11,6 +11,13 @@
      "units"
      "vim"
      "lua5.4"
+     "language-pack-zh-han*"
+     "fcitx5"
+     "fcitx5-chinese-addons"
+     "fcitx5-frontend-qt5"
+     "fcitx5-config-qt"
+     "fcitx5-material-color"
+     "gnome-tweaks"
      "zsh" -}}
 
 {{ $classicSnaps := list -}}
