--- a/home/dot_bash_profile.tmpl
+++ b/home/dot_bash_profile.tmpl
@@ -32,3 +32,9 @@ echo UPDATESTARTUPTTY | gpg-connect-agent 1> /dev/null
 
 # configure for goproxy
 export GOPROXY=https://proxy.golang.com.cn,direct
+
+# configure for fcitx5
+export INPUT_METHOD=fcitx
+export GTK_IM_MODULE=fcitx
+export QT_IM_MODULE=fcitx
+export XMODIFIERS=@im=fcitx
