--- a/home/.chezmoiscripts/linux/run_onchange_after_configure-gnome.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_after_configure-gnome.sh.tmpl
@@ -12,9 +12,12 @@ gsettings set org.gnome.Terminal.Legacy.Settings default-show-menubar false
 #gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles/${profile}/ font "MesloLGS NF"
 gsettings set org.gnome.desktop.interface monospace-font-name 'Sarasa Mono SC Nerd 13'
 
+# gsettings  添加 favorite-apps
+# gsettings set org.gnome.shell favorite-apps "$(gsettings get org.gnome.shell favorite-apps | sed s/.$//), 'appname.desktop']"
+
 gsettings set org.gnome.shell favorite-apps "[ \
 	'org.gnome.Terminal.desktop', \
-	'code_code.desktop', \
+	'code.desktop', \
 	'org.gnome.Nautilus.desktop' \
 ]"
 
