--- a/home/.chezmoiscripts/linux/run_onchange_before_install-go.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-go.sh.tmpl
@@ -1,4 +1,4 @@
-{{ if and (eq .osid "linux-ubuntu") (not .ephemeral) -}}
+{{- if and (eq .osid "linux-ubuntu") (not .ephemeral) -}}
 
 #!/bin/sh
 
@@ -7,5 +7,11 @@
 
 sudo add-apt-repository -y ppa:longsleep/golang-backports
 sudo apt-get install -y golang
+
+{{- 	else if and (eq .osid "linux-fedora") (not .ephemeral) -}}
+
+#!/bin/bash
+
+sudo dnf install -y golang
 
 {{ end -}}
