--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -80,6 +80,7 @@ sudo apt install -y ./bat_0.22.1_amd64.deb
 {{   $packages = mustAppend $packages "fcitx5-chinese-addons" -}}
 {{   $packages = mustAppend $packages "fcitx5-configtool" -}}
 {{   $packages = mustAppend $packages "gnome-tweaks" -}}
+{{   $packages = mustAppend $packages "gnome-shell-extension-dash-to-dock" -}}
 {{   $packages = mustAppend $packages "meld" -}}
 {{ end -}}
 
