fcitx5 classicui.conf

--- a/home/private_dot_config/private_fcitx5/private_conf/private_classicui.conf.tmpl
+++ b/home/private_dot_config/private_fcitx5/private_conf/private_classicui.conf.tmpl
@@ -7,9 +7,9 @@ WheelForPaging=True
 # Font
 Font="Sarasa Mono SC Nerd 13"
 # Menu Font
-MenuFont="Sarasa Mono SC Nerd 10"
+MenuFont="Sarasa Mono SC Nerd 13"
 # Tray Font
-TrayFont="Sarasa Mono SC Nerd 10"
+TrayFont="Sarasa Mono SC Nerd 13"
 # Tray Label Outline Color
 TrayOutlineColor=#000000
 # Tray Label Text Color
@@ -21,5 +21,5 @@ ShowLayoutNameInIcon=True
 # Use input method language to display text
 UseInputMethodLangaugeToDisplayText=True
 # Theme
-Theme=Material-Color-blue
+Theme=Alpha-white
 
