add env EDITOR for vim

--- a/home/dot_bash_profile.tmpl
+++ b/home/dot_bash_profile.tmpl
@@ -38,3 +38,7 @@ export INPUT_METHOD=fcitx
 export GTK_IM_MODULE=fcitx
 export QT_IM_MODULE=fcitx
 export XMODIFIERS=@im=fcitx
+
+# configure editor
+export EDITOR=/usr/bin/vim
+export VISUAL=/usr/bin/vim
