golang proxy configure

--- a/home/dot_bash_profile.tmpl
+++ b/home/dot_bash_profile.tmpl
@@ -16,7 +16,9 @@ if [[ -z "${COMING_FROM_BASHRC}" && -r "${HOME}/.bashrc" ]]; then
   unset COMING_FROM_BASH_PROFILE
 fi
 
-# configure for gpg-agent
-#export GPG_TTY=/dev/pts/1
-#export SSH_AUTH_SOCK=${XDG_RUNTIME_DIR}/gnupg/S.gpg-agent.ssh
-#echo UPDATESTARTUPTTY | gpg-connect-agent 1> /dev/null
+# configure for goproxy
+export GOPROXY=https://proxy.golang.com.cn,direct
+
+# configure editor
+export EDITOR=/usr/bin/vim
+export VISUAL=/usr/bin/vim
