修改 install-packages

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -14,18 +14,17 @@
      "vim"
      "lua5.4"
      "language-pack-zh-han*"
-     "fcitx5"
-     "fcitx5-chinese-addons"
-     "fcitx5-frontend-qt5"
-     "fcitx5-config-qt"
-     "fcitx5-material-color"
-     "gnome-tweaks"
      "zsh" -}}
 
 {{ $classicSnaps := list -}}
 
 {{ if not .headless -}}
 {{   $packages = mustAppend $packages "vim-gtk" -}}
+{{   $packages = mustAppend $packages "fcitx5" -}}
+{{   $packages = mustAppend $packages "fcitx5-chinese-addons" -}}
+{{   $packages = mustAppend $packages "fcitx5-frontend-qt5" -}}
+{{   $packages = mustAppend $packages "fcitx5-config-qt" -}}
+{{   $packages = mustAppend $packages "gnome-tweaks" -}}
 {{   $packages = mustAppend $packages "meld" -}}
 {{/*   $classicSnaps = mustAppend $classicSnaps "code"*/ -}}
 {{ end -}}
@@ -46,14 +45,21 @@ set -eufo pipefail
 {{ $sudo }}apt-get update -y
 {{ $sudo }}apt-get install -y {{ $packages | join " " }}
 
+if [ -f /usr/bin/code ]; then
+echo "vscode installed"
+else
 trap "rm -rf code_1.71.2-1663191218_amd64.deb" EXIT
 wget https://az764295.vo.msecnd.net/stable/74b1f979648cc44d385a2286793c226e611f59e7/code_1.71.2-1663191218_amd64.deb
 sudo apt install -y ./code_1.71.2-1663191218_amd64.deb
+fi
 
-
+if [ -f /usr/bin/bat ]; then
+echo "bat installed"
+else
 trap "rm -rf bat_0.22.1_amd64.deb" EXIT
 wget https://download.fastgit.org/sharkdp/bat/releases/download/v0.22.1/bat_0.22.1_amd64.deb
 sudo apt install -y ./bat_0.22.1_amd64.deb
+fi
 
 {{ range $classicSnaps }}
 {{ $sudo }}snap install --classic {{ . }}
@@ -96,8 +102,11 @@ set -eufo pipefail
 {{ $sudo }}dnf update -y
 {{ $sudo }}dnf install -y {{ $packages | join " " }}
 
+if [ -f /usr/bin/code ]; then
+echo "vscode installed"
+else
 trap "rm -rf code-1.71.2-1663191299.el7.x86_64.rpm" EXIT
 wget https://az764295.vo.msecnd.net/stable/74b1f979648cc44d385a2286793c226e611f59e7/code-1.71.2-1663191299.el7.x86_64.rpm
 {{ $sudo }}dnf localinstall -y ./code-1.71.2-1663191299.el7.x86_64.rpm
-
+fi
 {{ end -}}
