bw branch modified .chezmoiexternal.tom

--- a/home/.chezmoiscripts/linux/run_onchange_before-install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before-install-packages.sh.tmpl
@@ -14,21 +14,21 @@
 {{ end -}}
 
 {{ if eq .osid "linux-debian" "linux-ubuntu" -}}
-{{ $packages = mustAppend $packages "lua5.4" }}
+{{ $packages = mustAppend $packages "lua5.4" -}}
 
 #!/bin/bash
 
 set -eufo pipefail
 
-{{ $sudo }}apt-get update -y
-{{ $sudo }}apt-get install -y {{ $packages | join " " }}
+{{ $sudo -}}apt-get update -y
+{{ $sudo -}}apt-get install -y {{ $packages | join " " }}
 
 {{ else if eq .osid "linux-endeavouros" "linux-manjaro" -}}
-{{ $packages = mustAppend $packages "lua" }}
+{{ $packages = mustAppend $packages "lua" -}}
 
 #!/usr/bin/bash
 
-{{ $sudo }}pacman -Syy 
-{{ $sudo }}pacman -S --noconfirm --needed {{ $packages | join " " }}
+{{ $sudo -}}pacman -Syy 
+{{ $sudo -}}pacman -S --noconfirm --needed {{ $packages | join " " -}}
 
 {{ end -}}
