--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -26,7 +26,7 @@
 {{   $packages = mustAppend $packages "fcitx5-config-qt" -}}
 {{   $packages = mustAppend $packages "gnome-tweaks" -}}
 {{   $packages = mustAppend $packages "meld" -}}
-{{/*   $classicSnaps = mustAppend $classicSnaps "code"*/ -}}
+{{   $classicSnaps = mustAppend $classicSnaps "code" -}}
 {{ end -}}
 
 {{ if .personal -}}
@@ -45,11 +45,11 @@ set -eufo pipefail
 {{ $sudo }}apt-get update -y
 {{ $sudo }}apt-get install -y {{ $packages | join " " }}
 
-if ! [ -f /usr/bin/code ]; then
-trap "rm -rf code_1.71.2-1663191218_amd64.deb" EXIT
-wget https://az764295.vo.msecnd.net/stable/74b1f979648cc44d385a2286793c226e611f59e7/code_1.71.2-1663191218_amd64.deb
-sudo apt install -y ./code_1.71.2-1663191218_amd64.deb
-fi
+#if ! [ -f /usr/bin/code ]; then
+#trap "rm -rf code_1.71.2-1663191218_amd64.deb" EXIT
+#wget https://az764295.vo.msecnd.net/stable/74b1f979648cc44d385a2286793c226e611f59e7/code_1.71.2-1663191218_amd64.deb
+#sudo apt install -y ./code_1.71.2-1663191218_amd64.deb
+#fi
 
 if ! [ -f /usr/bin/bat ]; then
 trap "rm -rf bat_0.22.1_amd64.deb" EXIT
@@ -57,8 +57,10 @@ wget https://ghproxy.com/https://github.com/sharkdp/bat/releases/download/v0.22.
 sudo apt install -y ./bat_0.22.1_amd64.deb
 fi
 
-{{ range $classicSnaps }}
+{{ if lookPath "snap" }}
+{{   range $classicSnaps }}
 {{ $sudo }}snap install --classic {{ . }}
+{{   end }}
 {{ end }}
 
 {{-  else if eq .osid "linux-fedora" -}}
