--- a/home/.chezmoiscripts/linux/run_onchange_after_configure-gnome.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_after_configure-gnome.sh.tmpl
@@ -18,10 +18,11 @@ gsettings set org.gnome.desktop.interface monospace-font-name 'Sarasa Mono SC Ne
 gsettings set org.gnome.shell favorite-apps "[ \
 	'org.gnome.Terminal.desktop', \
 	'code.desktop', \
-	'org.gnome.Nautilus.desktop' \
+	'org.gnome.Nautilus.desktop', \
+	'microsoft-edge.desktop' \
 ]"
 
-gsettings set org.gnome.shell.extensions.dash-to-dock autohide true
+#gsettings set org.gnome.shell.extensions.dash-to-dock autohide true
 gsettings set org.gnome.shell.extensions.dash-to-dock dock-fixed false
 #gsettings set org.gnome.shell.extensions.dash-to-dock dock-position RIGHT
 gsettings set org.gnome.shell.extensions.dash-to-dock intellihide true
