--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -13,6 +13,7 @@
      "units"
      "vim"
      "lua5.4"
+     "font-manager"
      "language-pack-zh-han*"
      "zsh" -}}
 
@@ -26,7 +27,6 @@
 {{   $packages = mustAppend $packages "fcitx5-config-qt" -}}
 {{   $packages = mustAppend $packages "gnome-tweaks" -}}
 {{   $packages = mustAppend $packages "meld" -}}
-{{   $classicSnaps = mustAppend $classicSnaps "code" -}}
 {{ end -}}
 
 {{ if .personal -}}
@@ -45,11 +45,11 @@ set -eufo pipefail
 {{ $sudo }}apt-get update -y
 {{ $sudo }}apt-get install -y {{ $packages | join " " }}
 
-#if ! [ -f /usr/bin/code ]; then
-#trap "rm -rf code_1.71.2-1663191218_amd64.deb" EXIT
-#wget https://az764295.vo.msecnd.net/stable/74b1f979648cc44d385a2286793c226e611f59e7/code_1.71.2-1663191218_amd64.deb
-#sudo apt install -y ./code_1.71.2-1663191218_amd64.deb
-#fi
+if ! [ -f /usr/bin/code ]; then
+trap "rm -rf code.deb" EXIT
+wget -c https://code.visualstudio.com/sha/download\?build\=stable\&os\=linux-deb-x64 -O code.deb
+sudo apt install -y ./code.deb
+fi
 
 if ! [ -f /usr/bin/bat ]; then
 trap "rm -rf bat_0.22.1_amd64.deb" EXIT
