Add pinyin.conf & modfied gpg-agent.conf

--- a/home/private_dot_gnupg/gpg-agent.conf.tmpl
+++ b/home/private_dot_gnupg/gpg-agent.conf.tmpl
@@ -1,4 +1,10 @@
 # 8小时：28800? ， 12小时：43200? ， 24小时 ：86400  7天：604800
+
+# 最大缓存时间
+max-cache-ttl 604800
+# 最大缓存时间
+default-cache-ttl 604800
+
 enable-ssh-support
 # 最大缓存时间
 default-cache-ttl-ssh 604800
