modfied .chezmoiscripts/linux/install-packages.sh MustAppend not defined ERROR

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -38,10 +38,10 @@
 {{   $packages = mustAppend $packages "dconf-editor" -}}
 {{   $packages = mustAppend $packages "flameshot" -}}
 {{   $packages = mustAppend $packages "meld" -}}
-{{   $packages = MustAppend $packages "remmina" -}}
-{{   $packages = MustAppend $packages "remmina-plugin-rdp" -}}
-{{   $packages = MustAppend $packages "remmina-plugin-secret" -}}
-{{   $packages = MustAppend $packages "remmina-plugin-spice" -}}
+{{   $packages = mustAppend $packages "remmina" -}}
+{{   $packages = mustAppend $packages "remmina-plugin-rdp" -}}
+{{   $packages = mustAppend $packages "remmina-plugin-secret" -}}
+{{   $packages = mustAppend $packages "remmina-plugin-spice" -}}
 
 {{ end -}}
 
