ubuntu gnome fcitx5 settings

--- a/home/dot_bash_profile.tmpl
+++ b/home/dot_bash_profile.tmpl
@@ -33,11 +33,12 @@ echo UPDATESTARTUPTTY | gpg-connect-agent 1> /dev/null
 # configure for goproxy
 export GOPROXY=https://proxy.golang.com.cn,direct
 
+# move to ~/.pam_environment
 # configure for fcitx5
-export INPUT_METHOD=fcitx
-export GTK_IM_MODULE=fcitx
-export QT_IM_MODULE=fcitx
-export XMODIFIERS=@im=fcitx
+#export INPUT_METHOD=fcitx
+#export GTK_IM_MODULE=fcitx
+#export QT_IM_MODULE=fcitx
+#export XMODIFIERS=@im=fcitx
 
 # configure editor
 export EDITOR=/usr/bin/vim
